--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "projeto-final-hotelhub",
   "version": "1.0.0",
+  "type": "module",
   "description": "[![Review Assignment Due Date](https://classroom.github.com/assets/deadline-readme-button-22041afd0340ce965d47ae6ef1cefeee28c7c493a6346c4f15d667ab976d596c.svg)](https://classroom.github.com/a/c8QZoT96)",
   "main": "index.js",
   "scripts": {
@@ -10,23 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/express": "^4.17.21",
-    "bcrypt": "^5.1.1",
-    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "helmet": "^7.1.0",
-    "mongoose": "^8.6.2",
-    "typescript": "^5.5.4",
-    "zod": "^3.23.8"
-  },
-  "devDependencies": {
-    "@types/bun": "^1.1.8",
-    "@types/cors": "^2.8.17",
-    "@types/mongoose": "^5.11.97",
-    "@types/node": "^22.0.2",
-    "nodemon": "^3.1.4",
-    "ts-node": "^10.9.2"
+    "mongodb": "^6.9.0",
+    "mongoose": "^8.6.2"
   }
 }
