--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "projeto-final-hotelhub",
   "version": "1.0.0",
+  "type": "module",
   "description": "[![Review Assignment Due Date](https://classroom.github.com/assets/deadline-readme-button-22041afd0340ce965d47ae6ef1cefeee28c7c493a6346c4f15d667ab976d596c.svg)](https://classroom.github.com/a/c8QZoT96)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "node --watch src/index.js"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +19,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "helmet": "^7.1.0",
+    "mongodb": "^6.9.0",
     "mongoose": "^8.6.2",
     "typescript": "^5.5.4",
     "zod": "^3.23.8"
