--- a/package.json
+++ b/package.json
@@ -14,18 +14,8 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "helmet": "^7.1.0",
     "mongodb": "^6.9.0",
     "mongoose": "^8.6.2",
-    "typescript": "^5.5.4",
-    "zod": "^3.23.8"
-  },
-  "devDependencies": {
-    "@types/bun": "^1.1.8",
-    "@types/cors": "^2.8.17",
-    "@types/mongoose": "^5.11.97",
-    "@types/node": "^22.0.2",
-    "nodemon": "^3.1.4",
-    "ts-node": "^10.9.2"
+    "projeto-final-hotelhub": "file:"
   }
 }
