Adicionando Mongo Charts

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URL="mongodb+srv://karlosMessyas:xUaA2IyV7v10dQls@hotelhub.hrle3.mongodb.net/?retryWrites=true&w=majority&appName=HotelHub"
+MONGO_URL="mongodb+srv://karlosMessyas:JQaMJF7ovSArSUlI@hotelhub.hrle3.mongodb.net/?retryWrites=true&w=majority&appName=HotelHub"
